--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,43 @@
-*{
-  padding: 0px;
-  margin: 0px;
+* {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
-.container{
+
+.container {
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(-120deg, rgb(51, 214, 40),orange);
-  overflow-y: hidden;
-  overflow-x: hidden;
+  background-image: linear-gradient(-120deg, rgb(51, 214, 40), orange);
+  overflow: hidden;
 }
-.box{
+
+.box {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 50px ;
+  padding-top: 50px;
 }
-.box p{
+
+.box p {
   font: 30px bold;
   letter-spacing: 2px;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: rgb(8, 10, 156) ;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: rgb(8, 10, 156);
   margin-bottom: 50px;
 }
-.buttons{
+
+.buttons {
   width: 100%;
   height: 200px;
-  /* border: 1px solid red; */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   margin-bottom: 10px;
 }
-button{
+
+button {
   width: 170px;
   height: 170px;
   border-radius: 50%;
@@ -44,104 +47,170 @@ button{
   background-color: white;
   box-shadow: 0px 0px 15px red inset;
 }
-button img{
+
+button img {
   width: 90%;
   height: 90%;
   border-radius: 50%;
   transition: 1s;
-  
 }
-img:hover{
+
+img:hover {
   border: 1px solid red;
-  box-shadow:0px 0px 15px white,0px 0px 25px redwhite ;
+  box-shadow: 0px 0px 15px white, 0px 0px 25px red;
   animation: handShake 0.5s linear infinite;
 }
 
 @keyframes handShake {
   0% { transform: translate(1px, 1px) rotate(0deg); }
-  /* 10% { transform: translate(-1px, -2px) rotate(-1deg); } */
   20% { transform: translate(-3px, 0px) rotate(1deg); }
-  /* 30% { transform: translate(3px, 2px) rotate(0deg); } */
   40% { transform: translate(1px, -1px) rotate(1deg); }
-  /* 50% { transform: translate(-1px, 2px) rotate(-1deg); } */
   60% { transform: translate(-3px, 1px) rotate(0deg); }
-  /* 70% { transform: translate(3px, 1px) rotate(-1deg); } */
   80% { transform: translate(-1px, -1px) rotate(1deg); }
-  /* 90% { transform: translate(1px, 2px) rotate(0deg); } */
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-.results{
+.results {
   width: 100%;
   height: 50px;
-  /* border: 1pxS solid red; */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   font-family: Georgia, 'Times New Roman', Times, serif;
   color: rgb(47, 9, 237);
 }
-.results div{
+
+.results div {
   width: 170px;
-  padding: 8px 0px 8px 5px;
-  /* border: 1px solid red; */
+  padding: 8px 0 8px 5px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* @keyframes bgColor {
-  from{background-image: linear-gradient(-120deg, rgb(51, 214, 40),orange);}
-  to{background-image: linear-gradient(-120deg,orange,rgb(51, 214, 40));}
-} */
+/* Media Queries */
 
-
-/* media queries */
 /* Extra small devices (phones, 600px and down) */
-/* @media only screen and (max-width: 600px) {
-  .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+@media only screen and (max-width: 600px) {
+  .box {
+    padding-top: 20px;
   }
-   .box{
-    padding-top: 10px ;
-  }
-  .box p{
-    font: 20px bold;
+  
+  .box p {
+    font: 25px bold;
     letter-spacing: 2px;
     margin-bottom: 10px;
   }
-  .buttons{
+  
+  .buttons {
     height: 100px;
     margin-bottom: 5px;
   }
-  button{
+  
+  button {
     width: 70px;
     height: 70px;
-    border-radius: 50%;
   }
   
-  .results{
+  .results {
     height: 30px;
   }
-  .results div{
+  
+  .results div {
     width: 70px;
-    padding: 5px 0px 5px 3px;
+    padding: 5px 0 5px 3px;
   }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) 
-@media only screen and (min-width: 600px) {...}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  .box {
+    padding-top: 20px;
+  }
+  
+  .box p {
+    font: 25px bold;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+  }
+  
+  .buttons {
+    height: 150px;
+  }
+  
+  button {
+    width: 120px;
+    height: 120px;
+  }
+  
+  .results {
+    height: 40px;
+  }
+  
+  .results div {
+    width: 120px;
+    padding: 6px 0 6px 4px;
+  }
+}
 
- Medium devices (landscape tablets, 768px and up) 
-@media only screen and (min-width: 768px) {...}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .box {
+    padding-top: 30px;
+  }
+  
+  .box p {
+    font: 28px bold;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+  }
+  
+  .buttons {
+    height: 180px;
+  }
+  
+  button {
+    width: 150px;
+    height: 150px;
+  }
+  
+  .results {
+    height: 45px;
+  }
+  
+  .results div {
+    width: 150px;
+    padding: 7px 0 7px 5px;
+  }
+}
 
- Large devices (laptops/desktops, 992px and up) 
-@media only screen and (min-width: 992px) {...}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) 
-@media only screen and (min-width: 1200px) {...}  */
-/* #you{
- */
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 993px) {
+  .box {
+    padding-top: 50px;
+  }
+  
+  .box p {
+    font: 30px bold;
+    letter-spacing: 2px;
+    margin-bottom: 50px;
+  }
+  
+  .buttons {
+    height: 200px;
+  }
+  
+  button {
+    width: 170px;
+    height: 170px;
+  }
+  
+  .results {
+    height: 50px;
+  }
+  
+  .results div {
+    width: 170px;
+    padding: 8px 0 8px 5px;
+  }
+}
