--- a/styles.css
+++ b/styles.css
@@ -2,215 +2,158 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
 
 .container {
+  display: grid;
+  place-items: center;
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(-120deg, rgb(51, 214, 40), orange);
+  background-color: yellowgreen;
   overflow: hidden;
 }
 
 .box {
+  width: 90%;
+  max-width: 1200px;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  row-gap: 20px;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+}
+
+.box .title {
+  font-size: 2.5rem;
+  letter-spacing: 2px;
+  color: rgb(8, 10, 156);
+  margin-bottom: 20px;
+}
+
+.display {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+  gap: 20px;
   width: 100%;
-  height: 100%;
+
+}
+
+.display .card {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-top: 50px;
+  justify-content: space-around;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
-.box p {
-  font: 30px bold;
-  letter-spacing: 2px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: rgb(8, 10, 156);
-  margin-bottom: 50px;
-}
-
-.buttons {
+.playerScore, .computerScore {
   width: 100%;
-  height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-bottom: 10px;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 5px 0;
 }
 
-button {
-  width: 170px;
-  height: 170px;
-  border-radius: 50%;
-  border: none;
-  overflow: hidden;
-  background-size: cover;
-  background-color: white;
-  box-shadow: 0px 0px 15px red inset;
-}
-
-button img {
-  width: 90%;
-  height: 90%;
-  border-radius: 50%;
-  transition: 1s;
-}
-
-img:hover {
-  border: 1px solid red;
-  box-shadow: 0px 0px 15px white, 0px 0px 25px red;
-  animation: handShake 0.5s linear infinite;
-}
-
-@keyframes handShake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-.results {
+.moveResult {
   width: 100%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: rgb(47, 9, 237);
-}
-
-.results div {
-  width: 170px;
-  padding: 8px 0 8px 5px;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* Media Queries */
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .box {
-    padding-top: 20px;
-  }
-  
-  .box p {
-    font: 25px bold;
-    letter-spacing: 2px;
-    margin-bottom: 10px;
-  }
-  
-  .buttons {
-    height: 100px;
-    margin-bottom: 5px;
-  }
-  
-  button {
-    width: 70px;
-    height: 70px;
-  }
-  
-  .results {
-    height: 30px;
-  }
-  
-  .results div {
-    width: 70px;
-    padding: 5px 0 5px 3px;
-  }
+.moveResult img {
+  width: 100%;
+  height: 100%;
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 601px) and (max-width: 768px) {
-  .box {
-    padding-top: 20px;
-  }
-  
-  .box p {
-    font: 25px bold;
-    letter-spacing: 2px;
-    margin-bottom: 20px;
-  }
-  
-  .buttons {
-    height: 150px;
-  }
-  
-  button {
-    width: 120px;
-    height: 120px;
-  }
-  
-  .results {
-    height: 40px;
-  }
-  
-  .results div {
-    width: 120px;
-    padding: 6px 0 6px 4px;
-  }
+.resultDisplay {
+  border: none;
+  width: 170px;
+  padding: 5px;
+  text-align: center;
+  color: rgb(47, 9, 237);
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 769px) and (max-width: 992px) {
-  .box {
-    padding-top: 30px;
-  }
-  
-  .box p {
-    font: 28px bold;
-    letter-spacing: 2px;
-    margin-bottom: 30px;
-  }
-  
-  .buttons {
-    height: 180px;
-  }
-  
-  button {
-    width: 150px;
-    height: 150px;
-  }
-  
-  .results {
-    height: 45px;
-  }
-  
-  .results div {
-    width: 150px;
-    padding: 7px 0 7px 5px;
-  }
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 20px;
+  width: 100%;
+  justify-items: center;
 }
 
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 993px) {
-  .box {
-    padding-top: 50px;
+.buttons > button {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: none;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons > button img:hover {
+  transform: scale(1);
+  background-color: white;
+}
+
+.buttons button > img {
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
+  transition: 0.4s;
+  transform: scale(1.1);
+}
+
+.buttons button img:hover {
+  box-shadow: 0px 0px 10px 10px white inset;
+  border: 1px solid black;
+}
+
+.reset-btn {
+  width: 120px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: cadetblue;
+  color: white;
+  outline: none;
+  border: none;
+  transition: 0.3s;
+}
+
+.reset-btn:hover {
+  box-shadow: 0px 0px 5px black, 0px 0px 5px whitesmoke inset;
+}
+
+/* Media Queries for different screen sizes */
+
+@media (min-width: 768px) {
+  .box .title {
+    font-size: 3rem;
   }
-  
-  .box p {
-    font: 30px bold;
-    letter-spacing: 2px;
-    margin-bottom: 50px;
-  }
-  
-  .buttons {
+
+  .moveResult {
     height: 200px;
   }
-  
-  button {
-    width: 170px;
-    height: 170px;
+
+  .buttons > button {
+    width: 150px;
+    height: 150px;
   }
-  
-  .results {
-    height: 50px;
+}
+
+@media (min-width: 1024px) {
+  .box .title {
+    font-size: 4rem;
   }
-  
-  .results div {
-    width: 170px;
-    padding: 8px 0 8px 5px;
+
+  .buttons > button {
+    width: 200px;
+    height: 200px;
   }
 }
