--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,129 @@
+/* * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family:  Arial, sans-serif;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  background-color: yellowgreen;
+  overflow: hidden;
+}
+
+.box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.box .title {
+  font: 50px bold;
+  letter-spacing: 2px;
+  color: rgb(8, 10, 156);
+  margin-bottom: 70px;
+}
+
+.display{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.display .card{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.playerScore, .computerScore{
+  width: 100%;
+  text-align:  center;
+  font-size: 18px;
+  padding: 5px 0px;
+}
+.moveResult{
+  width: 100%;
+  height: 100%;
+}
+.moveResult img{
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0px;
+}
+
+.resultDisplay{
+  border: 1px solid none;
+  width: 170px;
+  padding: 5px;
+  text-align: center;
+  color: rgb(47, 9, 237);
+}
+
+.buttons {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+}
+
+.buttons > button {
+  margin-top: 50px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: none;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  
+}
+
+.buttons > button img:hover{
+  transform: scale(1);
+  background-color: white;
+}
+
+.buttons button >img {
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
+  transition: 0.4s; 
+  transform: scale(1.1);
+}
+
+.buttons button img:hover{
+box-shadow: 0px 0px 10px 10px white inset;
+border: 1px solid black;
+
+}
+
+.reset-btn{
+  width: 120px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: cadetblue;
+  color: white;
+  outline: none;
+  border: none;
+  transition: 0.3s;
+}
+.reset-btn:hover{
+  box-shadow: 0px 0px 5px black,0px 0px 5px whitesmoke inset
+} */
 * {
   padding: 0;
   margin: 0;
